# qml-demo

./: CMakeLists.txt
src/: main.cpp  main.qml
ui/: AlarmDelegate.qml  AlarmDialog.qml  MessageLabel.qml  StatesAndTransitions.qml  animations.qml  customtype.qml  input.qml  main.qml  window.qml
